styles/css/global/home/vtex.flex-layout.css
/* wishlist icon */
.flexRowContent--product__container :global(.vtex-wish-list-1-x-outline) {
    background-image : url("data:image/svg+xml,%3Csvg width='72' height='97' viewBox='0 0 72 97' fill='none' xmlns='http://www.w3.org/2000/svg' class='' style='max-width: 72px%3B min-width: 72px%3B height: auto%3B'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M40.9566 22.9414C42.2847 22.4985 43.6945 22.3873 45.0717 22.6168C46.4489 22.8462 47.7546 23.4099 48.8828 24.2621C50.0109 25.1143 50.9297 26.2309 51.5646 27.5213L51.5669 27.5262C52.3971 29.2351 52.6839 31.1737 52.3859 33.0628C52.0886 34.9476 51.2245 36.6861 49.9176 38.029L36.7416 52.1742C36.5473 52.3827 36.2799 52.5005 36.0006 52.5005C35.7212 52.5005 35.4538 52.3828 35.2595 52.1743L22.0835 38.0335C20.7766 36.6905 19.9124 34.9519 19.6151 33.0671C19.3171 31.178 19.6038 29.2394 20.434 27.5305L20.4362 27.5259C21.0706 26.2352 21.9891 25.1182 23.117 24.2655C24.245 23.4128 25.5506 22.8486 26.9278 22.6187C28.3051 22.3887 29.7151 22.4995 31.0434 22.9421C32.3648 23.3823 33.5683 24.1386 34.5572 25.15L36.0005 26.5184L37.4437 25.1501C38.4322 24.1386 39.6354 23.3821 40.9566 22.9414ZM49.7268 28.4942C49.2396 27.505 48.5349 26.6489 47.6699 25.9954C46.8041 25.3414 45.802 24.9088 44.7451 24.7327C43.6882 24.5566 42.6062 24.642 41.587 24.9819C40.5678 25.3218 39.6401 25.9067 38.8793 26.689C38.8694 26.6992 38.8593 26.7091 38.849 26.7189L36.6956 28.7605C36.3019 29.1338 35.6991 29.1338 35.3053 28.7605L33.152 26.7189C33.1418 26.7092 33.1317 26.6993 33.1219 26.6892C32.3608 25.907 31.4329 25.3223 30.4135 24.9827C29.3942 24.6431 28.312 24.558 27.2551 24.7345C26.1981 24.911 25.1962 25.344 24.3305 25.9984C23.4656 26.6522 22.7611 27.5087 22.2743 28.4983C21.6417 29.8017 21.4233 31.28 21.6505 32.7205C21.8779 34.1618 22.5397 35.491 23.5406 36.5167C23.5462 36.5225 23.5518 36.5283 23.5574 36.5343L36.0004 49.8884L48.4435 36.5301C48.4491 36.5241 48.4547 36.5182 48.4604 36.5124C49.4613 35.4868 50.1231 34.1576 50.3505 32.7162C50.5777 31.2757 50.3593 29.7975 49.7268 28.4942Z' fill='white'%3E%3C/path%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M72 0H0V95.9997L36 69.1993L72 95.9997V0ZM72 96.2774H0V96.2777H72V96.2774Z' fill='currentColor' fill-opacity='0.12'%3E%3C/path%3E%3C/svg%3E");
    background-size  : contain;
    background-repeat: no-repeat;
    width            : 33px;
    height           : 44px;
}

.flexRowContent--product__container :global(.vtex-wish-list-1-x-fill) {
    background-image : url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 48 64' width='4.8em'%3E%3Cmask id='b420f7127dd971eda66fe536093197e2__a' fill='currentColor'%3E%3Cpath fill-rule='evenodd' d='M48 0H0v64l24-17.87L48 64V0Z' clip-rule='evenodd'%3E%3C/path%3E%3C/mask%3E%3Cpath fill='%2300CF9F' fill-rule='evenodd' d='M48 0H0v64l24-17.87L48 64V0Z' clip-rule='evenodd' class='P14KYS'%3E%3C/path%3E%3Cpath fill='%2300CF9F' d='M0 0v-1h-1v1h1Zm48 0h1v-1h-1v1ZM0 64h-1v2l1.6-1.2L0 64Zm24-17.87.6-.8-.6-.44-.6.44.6.8ZM48 64l-.6.8L49 66v-2h-1ZM0 1h48v-2H0v2Zm1 63V0h-2v64h2Zm-.4.8 24-17.86-1.2-1.6-24 17.86 1.2 1.6Zm22.8-17.86 24 17.86 1.2-1.6-24-17.87-1.2 1.6ZM47 0v64h2V0h-2Z' mask='url(%23b420f7127dd971eda66fe536093197e2__a)' class='xNZEk7'%3E%3C/path%3E%3Cpath fill='%23fff' d='M35.3 18.08a6.57 6.57 0 0 0-10.44-1.71l-.86.78-.83-.76a6.53 6.53 0 0 0-5.69-1.8 6.45 6.45 0 0 0-3.57 10.95l9.37 9.66a1 1 0 0 0 1.44 0l9.36-9.64a6.4 6.4 0 0 0 1.22-7.48Z' class='dZR92M'%3E%3C/path%3E%3Cpath fill='currentColor' fill-rule='evenodd' d='M27.3 15.3a5.7 5.7 0 0 1 5.29.87 6.09 6.09 0 0 1 1.79 2.18 6.24 6.24 0 0 1-1.1 7l-8.79 9.43a.67.67 0 0 1-.98 0l-8.79-9.42a6.24 6.24 0 0 1-1.1-7v-.01a6.09 6.09 0 0 1 1.8-2.17 5.8 5.8 0 0 1 5.28-.89c.88.3 1.68.8 2.34 1.48l.96.9.96-.9a5.88 5.88 0 0 1 2.34-1.48Zm5.85 3.7a4.67 4.67 0 0 0-1.37-1.67 4.45 4.45 0 0 0-4.06-.68 4.51 4.51 0 0 0-1.82 1.16l-1.44 1.36a.67.67 0 0 1-.92 0l-1.44-1.36-.02-.02a4.51 4.51 0 0 0-3.91-1.3c-.7.12-1.37.4-1.95.84a4.67 4.67 0 0 0-1.79 4.48 4.66 4.66 0 0 0 1.27 2.55l8.3 8.9 8.3-8.9v-.02a4.76 4.76 0 0 0 .84-5.35Z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
    background-size  : contain;
    background-repeat: no-repeat;
    width            : 33px;
    height           : 44px;
}

.flexCol--home__slider--one {
    margin-bottom: 2rem;
}

.flexCol--home__slider--one :last-child {
    align-self: center;
}

.flexRow--best_games-shelf {
    background-color: #330e82;
}

.flexRow--next_game-shelf {
    background-color: #330e82;
}

.flexRowContent--home__popularcards_mobile {
    display: flex;
}

.flexRowContent--product__container :global(.vtex-flex-layout-0-x-stretchChildrenWidth):first-child {
    width: 45% !important;
}

.flexRowContent--product__container :global(.vtex-flex-layout-0-x-stretchChildrenWidth):nth-child(2n) {
    width: 50% !important;
}

.flexRowContent--product__container :global(.vtex-flex-layout-0-x-stretchChildrenWidth):nth-child(3n) {
    width   : auto !important;
    position: relative;
    bottom  : 8px;
}

.flexRowContent--product__container :global(.vtex-flex-layout-0-x-stretchChildrenWidth):nth-child(4n) {
    width: 25% !important;
}

.flexColChild--container__shelf:nth-child(5n) {
    align-self   : center;
    margin-top   : 2.5rem;
    margin-bottom: 2.5rem;
}

